--- a/src/components/layout/Header/Header.scss
+++ b/src/components/layout/Header/Header.scss
@@ -89,6 +89,10 @@
 
       &--open {
         transform: translateX(0);
+
+        :root[dir='rtl'] & {
+          transform: translateX(0);
+        }
       }
     }
   }
